feat(GHA): test printing out secrets

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,7 @@ jobs:
 
       - name: Run tests
         run: npm test 
+      - name: Echo secrets
+        run: echo ${{ secrets.DOCKER_USERNAME }}
       
 
