fix(GHA): try adding context

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,7 @@ jobs:
       - name: Build & Tag Docker image
         uses: docker/build-push-action@v4
         with:
+          context: .
           push: true
           tags: mazenbdul/sample-react-docker-app:latest
       
