--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,7 @@ jobs:
           deployment_package: deploy.zip
           existing_bucket_name: elasticbeanstalk-us-east-1-872767302345
           use_existing_version_if_available: true
+          wait_for_deployment: false
         
 
       
