--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,7 +65,7 @@ jobs:
           environment_name: Samplereactdockerapp-env
           version_label: ${{ github.sha }}
           region: us-east-1
-          deployment_package: deploy.zip
+          deployment_package: deploy-${{ github.sha }}.zip
           existing_bucket_name: elasticbeanstalk-us-east-1-872767302345
           use_existing_version_if_available: false
           wait_for_deployment: true
