fix(GHA): update AWS env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -61,8 +61,8 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: sample-react-docker-app
-          environment_name: Samplereactdockerapp-env
+          application_name: react-docker-aws
+          environment_name: Reactdockeraws-env
           version_label: ${{ github.sha }}
           region: us-east-1
           deployment_package: deploy-${{ github.sha }}.zip
