--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,12 +23,7 @@ jobs:
       - name: Run tests
         run: npm test 
     
-  build-and-push:
-    env: 
-      AWS_ENV_NAME: 'Samplereactdockerapp-env'
-      AWS_APP_NAME: 'sample-react-docker-app'
-      AWS_REGION: 'us-east-1'
-
+  build-and-deploy:
     runs-on: ubuntu-latest
     needs: test
     steps:
@@ -61,12 +56,12 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: react-docker-aws
-          environment_name: Reactdockeraws-env
+          application_name: ${{ secrets.AWS_APP_NAME }}
+          environment_name: ${{ secrets.AWS_ENV_NAME }}
           version_label: ${{ github.sha }}
           region: us-east-1
           deployment_package: deploy-${{ github.sha }}.zip
-          existing_bucket_name: elasticbeanstalk-us-east-1-872767302345
+          existing_bucket_name: ${{ secrets.AWS_BUCKET_NAME }}
           use_existing_version_if_available: false
           wait_for_deployment: true
         
